Setup mongodb replica set and add websocket connection
