# server/docs/swagger.json
@@ -29,7 +29,7 @@
                     "application/json"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "tags": [
                     "agent"
@@ -178,6 +178,31 @@
                         }
                     }
                 }
+            }
+        },
+        "/mission/ws": {
+            "get": {
+                "description": "Connect to a mission via websocket",
+                "consumes": [
+                    "text/plain"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "mission"
+                ],
+                "summary": "Connect WebSocket",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
             }
         },
         "/mission/{missionID}": {
@@ -445,6 +470,9 @@
                 "id": {
                     "type": "string"
                 },
+                "image": {
+                    "type": "string"
+                },
                 "messages": {
                     "type": "array",
                     "items": {
@@ -453,6 +481,9 @@
                 },
                 "missionID": {
                     "type": "string"
+                },
+                "updateAt": {
+                    "type": "integer"
                 }
             }
         },
@@ -462,8 +493,8 @@
                 "content": {
                     "type": "string"
                 },
-                "image": {
-                    "type": "string"
+                "isReport": {
+                    "type": "boolean"
                 },
                 "isUser": {
                     "type": "boolean"
